@@ -1,5 +1,3 @@
-/* #define PQXX_BROKEN_ITERATOR 1 */
-/* #define PQXX_BROKEN_USING_DECL 1 */
 #define PQXX_HAVE_CPP_PRAGMA_MESSAGE 1
 /* #define PQXX_HAVE_CPP_WARNING 1 */
 #define PQXX_HAVE_LONG_LONG 1
